<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TFIDemo</string>
    <string name="action_settings">Settings</string>
	<string name="settings_success">success</string>
	<string name="settings_fail">fail</string>
    
    <string name="title_barcode">Barcode Scanner</string>
    <string name="title_nfc">NFC</string>
    <string name="title_infrared">Infrared</string>
    <string name="title_scard">Smart Card</string>
    <string name="title_gps">GPS</string>
    <string name="title_sensor">Sensor</string>
    <string name="title_tp">Touchpanel</string>
    <string name="title_headset">Headset</string>
    
    <string name="barcode_init">Initializing, please wait</string>
    <string name="barcode_info_field">Barcode info</string>
    <string name="barcode_attr">Scanner info</string>
    <string name="barcode_sn">Serial number:</string>
    <string name="barcode_date">Factory date:</string>
    <string name="barcode_ver">Fireware version:</string>
    <string name="barcode_esn">Electron-serial number:</string>
    <string name="barcode_set_esn">Input new electron-serial number:</string>
    <string name="barcode_scanner">Scan mode</string>
    <string name="barcode_trigger">Trigger</string>
    <string name="barcode_sensor">Induction</string>
    <string name="barcode_continue">Continuous </string>
    <string name="barcode_esn_digits">0123456789-abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="barcode_disconnect">Barcode scanner disconnected</string>
    <string name="barcode_setting_failed">Setup failed!</string>
    <string name="barcode_capture">Scan barcode</string>
    
    <string name="nfc_info_field">NFC Infos</string>
    <string name="nfc_ndef_msg">Android NFC data exchange format\n\n</string>
    <string name="nfc_tech_msg">Standard NFC tag technology\n\n</string>
    <string name="nfc_tag_msg">Unknown NFC tag technology\n\n</string>
    <string name="nfc_stby_msg">No NFC card found</string>

    <string name="infrared_send_field">Send message</string>
    <string name="infrared_recv_field">Recv message</string>
    <string name="infrared_send_prompt">To sending message</string>
    <string name="infrared_sending">Send</string>
    
    <string name="bandrate">Baud rate</string>
    <string name="bandrate_1200">1200</string>
    <string name="bandrate_2400">2400</string>
    
    <string name="scard_info_field">Smart Card Infos</string>
    <string name="scard_establish_context">Establish context:</string>
    <string name="scard_release_context">Release context:</string>
    <string name="scard_is_valid_context">Is context available:</string>
    <string name="scard_connect_state">Connect state:</string>
    <string name="scard_connecting">Connecting</string>
    <string name="scard_begin_transaction">Begin transaction:</string>
    <string name="scard_end_transaction">Transaction end:</string>
    <string name="scard_statues">Statues acquire:</string>
    <string name="scard_statues_change">Statues changes:</string>
    <string name="scard_transmit">Transmit APDU:</string>
    <string name="scard_groups">Groups acquire:</string>
    <string name="scard_groupname">GroupName:</string>
    <string name="scard_readers">Readers acquire:</string>
    <string name="scard_readername">ReaderName:</string>
    <string name="scard_error">error</string>
    <string name="scard_complete">completed</string>
    <string name="scard_valid">valid</string>
    <string name="scard_invalid">invalid</string>
    <string name="scard_connect">already connected</string>
    <string name="scard_reconnect">reconnect</string>
    <string name="scard_disconnect">disconnect</string>
    <string name="scard_reason">E:</string>
    <string name="scard_refresh">refresh</string>
    
    <string name="gps_location_field">Locating, please wait</string>
    <string name="gps_nmea_field">NMEA infos</string>
    <string name="gps_available_satellites">Valid satellites:</string>
    <string name="gps_useful_satellites">Useful satellites:</string>
    <string name="gps_longitude">longitude</string>
    <string name="gps_latitude">latitude</string>
    <string name="gps_default_value">0</string>
    
    <string name="sensor_accel">Accelerator:</string>
    <string name="sensor_magnetic">Magnetic:</string>
    <string name="sensor_x">x-axis:&#160;</string>
    <string name="sensor_y">y-axis:&#160;</string>
    <string name="sensor_z">z-axis:&#160;</string>
    
    <string name="headset_info">Headset prompt</string>
    <string name="headset_prompt">Switch to the serial mode?</string>
    
    <string name="disconnect">Communication port is not available</string>
    <string name="next">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="sending">Send data:</string>
    <string name="received">Rece data:</string>
    <string name="barcode_decode_ver">Decode Version:</string>
    <string name="barcode_framework_ver">Framework Version:</string>
    <string name="barcode_soft_ver">Software Version:</string>
    
    <string name="error">Error</string>
    <string name="confirm">Confirm</string>
    <string name="barcode_init_failed">Init Failed!</string>
    <string name="wait_for_data">Waiting for data</string>
    <string name="t_notice">Press BACK to return to main menu</string>
</resources>
