<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutStyle"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView style="@style/WhiteSeparator" />
    
    <TextView android:id="@+id/barcode_info"
        android:layout_width="match_parent"
        android:layout_height="350dip"
        android:layout_marginBottom="5dip"
        android:gravity="center"
        android:background="#F0F0F0"
        android:padding="2dip"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        android:autoLink="web|email"
        android:linksClickable="true"
        android:hint="@string/barcode_info_field" />
    
    <TextView style="@style/WhiteSeparator" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginBottom="5dip"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:orientation="vertical" >
            <TextView
	            style="@style/TextViewStyle"
	            android:layout_marginBottom="5dip"
	            android:textSize="20sp"
				android:textStyle="bold"
	            android:text="@string/barcode_attr" />
            <TextView android:id="@+id/barcode_ver"
                style="@style/TextViewStyle"
                android:text="@string/barcode_ver" />
            <TextView android:id="@+id/barcode_date"
                style="@style/TextViewStyle"
                android:text="@string/barcode_date" />
            <TextView android:id="@+id/barcode_sn"
                style="@style/TextViewStyle"
                android:text="@string/barcode_sn" />
            <TextView android:id="@+id/barcode_esn"
                style="@style/TextViewStyle"
                android:text="@string/barcode_esn" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"
            android:layout_gravity="center"
            android:orientation="vertical" >
			<TextView
                style="@style/TextViewStyle"
				android:layout_marginBottom="5dip"
                android:textSize="20sp"
				android:textStyle="bold"
                android:text="@string/barcode_scanner" />
            <RadioGroup android:id="@+id/barcode_scanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
				android:layout_marginBottom="10dip"
                android:orientation="horizontal" >
                <RadioButton android:id="@+id/barcode_trigger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
					android:textSize="17sp"
                    android:text="@string/barcode_trigger" />
                <RadioButton android:id="@+id/barcode_sensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
					android:textSize="17sp"
                    android:text="@string/barcode_sensor" />
                <RadioButton android:id="@+id/barcode_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
					android:textSize="17sp"
                    android:text="@string/barcode_continue" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <EditText android:id="@+id/barcode_set_esn"
                    android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:padding="1dip"
	                android:background="#F0F0F0"
	                android:textColor="#000000"
	                android:singleLine="true"
	                android:digits="@string/barcode_esn_digits"
	                android:hint="@string/barcode_set_esn" />
                <TextView
                    android:layout_width="1dip"
                    android:layout_height="1dip"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip" />
	            <Button android:id="@+id/barcode_modify_esn"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:textColor="#FFFFFF"
	                android:text="@string/next" />
            </LinearLayout>
        </LinearLayout>
	</LinearLayout>

	<TextView style="@style/WhiteSeparator" />

	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center" >
		<ImageButton android:id="@+id/barcode_capture"
			android:background="@drawable/ic_capture"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/barcode_capture" />
	</LinearLayout>
	
</LinearLayout>
