<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutStyle"
    android:background="#000000"
    android:orientation="vertical" >
    
    <TextView style="@style/WhiteSeparator" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/received" />
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_weight="3"
        android:background="#F0F0F0"
        android:scrollbars="vertical" >
        <TextView android:id="@+id/infrared_recv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="2dip"
	        android:textSize="17sp"
	        android:textColor="#000000"
	        android:hint="@string/infrared_recv_field" />
    </ScrollView>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/sending" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_weight="1"
        android:background="#F0F0F0"
        android:scrollbars="vertical" >
        <TextView android:id="@+id/infrared_send"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="2dip"
	        android:textSize="17sp"
	        android:textColor="#000000"
	        android:hint="@string/infrared_send_field" />
    </ScrollView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:orientation="horizontal" >
        <EditText android:id="@+id/infrared_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="1dip"
            android:background="#F0F0F0"
            android:textColor="#000000"
            android:singleLine="true"
            android:hint="@string/infrared_send_prompt" />
        <TextView
            android:layout_width="1dip"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />
        <Button android:id="@+id/infrared_sending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:text="@string/infrared_sending" />
    </LinearLayout>
    
</LinearLayout>