<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutStyle"
    android:background="#000000"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/gps_location"
        android:layout_width="match_parent"
        android:layout_height="350dip"
        android:layout_weight="1"
        android:layout_marginTop="10dip"
    	android:layout_marginBottom="5dip"
    	android:background="#F0F0F0"
        android:padding="5dip"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:hint="@string/gps_location_field" />
    
    <TextView style="@style/WhiteSeparator" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="17sp"
	            android:textColor="#FFFFFF"
	            android:text="@string/gps_available_satellites" />
	        <TextView android:id="@+id/gps_available_satellites"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="17sp"
	            android:textColor="#FFFFFF"
	            android:text="@string/gps_default_value" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="17sp"
	            android:textColor="#FFFFFF"
	            android:text="@string/gps_useful_satellites" />
	        <TextView android:id="@+id/gps_useful_satellites"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="17sp"
	            android:textColor="#FFFFFF"
	            android:text="@string/gps_default_value" />
        </LinearLayout>
    </LinearLayout>
    <TextView style="@style/WhiteSeparator" />
    
    <ScrollView android:id="@+id/gps_scnmea"
        android:layout_width="match_parent"
        android:layout_height="350dip"
        android:layout_weight="1"
        android:layout_marginTop="5dip"
        android:background="#F0F0F0"
		android:scrollbars="vertical" >
        <TextView android:id="@+id/gps_nmea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dip"
            android:textColor="#000000"
            android:hint="@string/gps_nmea_field" />
    </ScrollView>
</LinearLayout>